package com.kaizen.matchtime.presentation.util

object TestTags {

    const val ERROR_UI = "error_ui"
    const val LOADER = "loader"
    const val SWITCH = "switch"
    const val EXPAND_COLLAPSE_BUTTON = "expand_collapse_button"
    const val SNACKBAR_HOST = "snackbar_host"
    const val FAVORITE_STAR = "favorite_star"

}