...
                    showOnlyFavorites = false,
                    icon = Icons.Default.SportsSoccer,
                    events = listOf(
                        EventUI(
                            "22911144",
                            "FOOT",
                            "AEK",
                            "Olympiakos",
                            false,
                            UiText.DynamicString("01:22:00")
                        ),
                        EventUI(
                            "22925144",
                            "FOOT",
...
